tests/models/enum/named/bool/fail/lt.stderr
error: Support condition is alias, default and validate
 --> tests/models/enum/named/bool/fail/lt.rs:6:9
  |
6 |         value: bool
  |         ^^^^^
